Bug 398608 - Assert in kis_png_export on rendering animation
Summary: Assert in kis_png_export on rendering animation
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Animation (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-09-14 08:43 UTC by Halla Rempt
Modified: 2018-09-14 13:48 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Halla Rempt 2018-09-14 08:43:29 UTC
On rendering an animation, the png export filter complains:

SAFE ASSERT (krita): "cfg->hasProperty(KisImportExportFilter::ImageContainsTransparencyTag)" in file /home/boud/dev/krita/plugins/impex/png/kis_png_export.cc, line 148
Comment 1 Dmitry Kazakov 2018-09-14 13:32:22 UTC
Git commit fe2d0429b35aafab7a785f1b331b91c24716d7bc by Dmitry Kazakov.
Committed on 14/09/2018 at 13:25.
Pushed by dkazakov into branch 'master'.

Fix an assert when trying to export a PNG image sequence

M  +7    -3    libs/ui/KisImportExportManager.cpp
M  +6    -0    libs/ui/KisImportExportManager.h
M  +11   -1    plugins/extensions/animationrenderer/DlgAnimationRenderer.cpp

https://commits.kde.org/krita/fe2d0429b35aafab7a785f1b331b91c24716d7bc
Comment 2 Dmitry Kazakov 2018-09-14 13:48:13 UTC
Git commit 6865fb9df006ea3534d3a8203e3532c4990f5062 by Dmitry Kazakov.
Committed on 14/09/2018 at 13:36.
Pushed by dkazakov into branch 'krita/4.1'.

Fix an assert when trying to export a PNG image sequence

M  +7    -3    libs/ui/KisImportExportManager.cpp
M  +6    -0    libs/ui/KisImportExportManager.h
M  +11   -1    plugins/extensions/animationrenderer/DlgAnimationRenderer.cpp

https://commits.kde.org/krita/6865fb9df006ea3534d3a8203e3532c4990f5062