Fix an assert when trying to export a PNG image sequence

BUG:398608